mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/contract_too_large_for_storage.sol
contract C layout at 1 {
    uint[2**256 - 1] x;
    uint y;
}
// ----
// TypeError 7676: (0-62): Contract requires too much storage.
